--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
+    "passport-steam": "^1.0.17",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
@@ -38,6 +39,7 @@
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
     "@types/passport-github2": "^1.2.5",
+    "@types/passport-steam": "^1.0.1",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
